--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,39 +1,32 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
-    /* box-sizing: border-box; */
-}
 
 body {
-    font-family: 'Lato', sans-serif;
+    font-family: Nunito, sans-serif;
+    color: #1c1c1c;
 }
 
 nav {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.2)
+    background-color: #000000;
+    background: linear-gradient(rgba(17, 17, 17, 0.8), rgba(20, 20, 20, 1));
 }
 
-nav p {
-    margin-left: 30px;
+nav a {
     text-decoration: none;
-    color: #000000;
+    color: #FFFFFF;
     font-weight: 800;
-    text-transform: uppercase;
-    font-size: 1.8rem;
+    font-size: 32px;
+    font-family: Yellowtail, serif;
 }
 
 nav ul {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     list-style: none;
     padding: 0;
     width: 100%;
-    flex-wrap: nowrap;
 }
 
 nav ul li {
@@ -46,24 +39,7 @@ nav ul li a {
     padding: 10px 0;
     width: 100%;
     text-decoration: none;
-    color: #000000;
-    transition: 2ms ease-in;
-    position: relative;
-}
-
-nav ul li a:before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 0px;
-    height: 3px;
-    background-color: rgb(251, 255, 0);
-    transition: all 1.5s ease;
-}
-
-nav ul li a:hover:before {
-    width: 100%;
+    color: #FFFFFF;
 }
 
 header {
@@ -72,35 +48,26 @@ header {
     align-items: center;
     color:#FFFFFF;
     text-align: center;
-    padding: 54px;
+
 }
 
 header, img {
-
     background: linear-gradient(rgba(17, 17, 17, 0.8), rgba(20, 20, 20, 1)), url(/assets/img/fundo.jpeg);
-    /* background-image: url("../img/fundo.jpeg"); */
     background-size: cover;
     background-repeat: no-repeat;
-    /* background-position: center; */
     background-position-y: 0px;
     top: 0;
     left: 0;
 }
 
 header h1 {
+    display: flex;;
     color: #FFFFFF;
 }
 
 header h2 {
     color: #FFFFFF;
 }
-
-/* .texto-1 {
-    font-size: 5rem;
-    margin-bottom: 2rem;
-    text-align: center;
-} */
-
 
 .texto-1 {
     font-size: 2rem;
@@ -111,6 +78,28 @@ header h2 {
 .texto-2 {
     width: 100%;
     margin-bottom: 5rem;
+    padding-top: 2.9rem;
+    font-size: 2rem;
+    color: rgb(165, 165, 165);
+    text-transform: uppercase;
+}
+
+header h1 {
+    color: #FFFFFF;
+}
+
+header h2 {
+    color: #FFFFFF;
+}
+
+.texto-1 {
+    font-size: 3rem;
+    margin-bottom: 10rem;
+    text-align: center;
+}
+
+.texto-2 {
+    margin-bottom: 7.4rem;
     padding-top: 2.9rem;
     font-size: 2rem;
     color: rgb(165, 165, 165);
@@ -143,70 +132,27 @@ header h2 {
     border: none;
 }
 
-.close-menu {
-    display: none;
+.contato {
+    padding-top: 30px;
+    background-color: #000000;
+    display: flex;
+    flex-grow: column wrap;
+    justify-content:space-evenly;   
 }
-
-/* .btn, button::before {
-    content: '';
-    border-radius: 20px;
-    bottom: 0;
-    left: 0;
-    position: absolute;
-    width: 0;
-    height: 60px;
-    background-color: rgb(61, 61, 61);
-    z-index: -1;
-    transition: 1s;
-}
-
-.btn, button:hover:before {
+.contato img {
     width: 100%;
-} */
+    height: 500px;
+}
 
-@media (max-width: 610px) {
-    .menu {
-        bottom: 0;
-        /* height: 100vh; */
+@media screen and (min-width: 768px) {
+    
+    nav {
+        flex-direction: row;
+        justify-content: space-around;
     }
 
     nav ul {
-        flex-direction: column;
-        justify-content: center;
+        flex-direction: row;
+        width: 70%;
     }
-
-    .menu {
-        display: none;
-    }
-
-    .close-menu-label::after {
-        content: '☰';
-        position: fixed;
-        z-index: 2;
-        top: 2rem;
-        right: 2rem;
-        color: #FFFFFF;
-        font-size: 2rem;
-        line-height: 3rem;
-        width: 3rem;
-        height: 3rem;
-        text-align: center;
-        padding: 0.5rem;
-        cursor: pointer;
-    }
-
-    .close-menu:checked~.menu {
-        display: block;
-    }
-
-    .close-menu:checked~.close-menu-label::after {
-        display: block;
-        content: '×';
-    }
-
-    .menu-spacing {
-        display: none;
-    }
-
-    
 }
