--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,18 +1,18 @@
-
+/* 
 body {
     font-family: Nunito, sans-serif;
     color: #1c1c1c;
-}
+} */
 
-nav {
+/* nav {
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #000000;
     background: linear-gradient(rgba(17, 17, 17, 0.8), rgba(20, 20, 20, 1));
-}
+} */
 
-nav a {
+/* nav a {
     text-decoration: none;
     color: #FFFFFF;
     font-weight: 800;
@@ -40,9 +40,9 @@ nav ul li a {
     width: 100%;
     text-decoration: none;
     color: #FFFFFF;
-}
+} */
 
-header {
+/* header {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -142,9 +142,9 @@ header h2 {
 .contato img {
     width: 100%;
     height: 500px;
-}
+} */
 
-@media screen and (min-width: 768px) {
+/* @media screen and (min-width: 768px) {
     
     nav {
         flex-direction: row;
@@ -155,4 +155,4 @@ header h2 {
         flex-direction: row;
         width: 70%;
     }
-}
+} */
