--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,3 +64,15 @@ header, img {
 section {
     margin-top: 100px;
 }
+
+@media screen and (max-width: 790px) {
+    .navbar {
+        background: #000000;
+    }
+}
+
+/*@media screen and (min-width: 790) {}
+.navbar  {
+    align-items: stretch;
+    display: flex;
+} */
