--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,9 +70,9 @@ section {
         background: #000000;
     }
 }
-
+/* 
 /* @media screen and (min-width: 790) {}
 .navbar  {
     align-items: stretch;
     display: flex;
-} */
+} */ */
