--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,18 @@ header {
     align-items: center;
     color:#FFFFFF;
     text-align: center;
-} 
+}
+
+.marginTopSection {
+    margin-top: 20px;
+    padding-top: 20px;
+    padding-bottom: 0px;
+}
+
+.marginBottomSection {
+    margin-top: 0px;
+    padding: 20px 0px 0px 0px;
+}
 
 .menu-label {
     padding: 10px;
@@ -93,7 +104,7 @@ section {
 
 form input, form label, form button {
     display: block;
-    width: 30%;
+    width: 50%;
     margin-bottom: 10px;
 }
 
@@ -135,30 +146,65 @@ form button:hover {
     float: right;
 }
 
-@media screen and (max-width: 465px) {
+img {
+    height: 266px;
+    width: auto;
+}
+.titleIMC {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#formulario {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.imgIMC {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.columns {
+    background: #c5bbbb;
+}
+
+.column .container {
+    margin-bottom: 0px;
+}
+
+/* @media screen and (max-width: 465px) {
     form button {
         font-size: 12px;
         font-weight: 700;
         height: 50px;
     }
-}
+} */
 @media screen and (max-width: 386px) {
     .navbar {
         display: block;
     }
+
+    img {
+        height: 200px;
+        width: auto;
+    }
     
-    form input {
+    /* form input {
         font-size: 18px;
         padding: 5 15px;
     }
 
     form button {
         font-size: 9px;
-    }
+    } */
 }
 
-@media screen and (max-width: 352px) {
+/* @media screen and (max-width: 352px) {
     form button {
         font-size: 7px;
     }
-}
+} */
