--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,54 +1,38 @@
-/* 
-body {
-    font-family: Nunito, sans-serif;
-    color: #1c1c1c;
-} */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
 
-/* nav {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #000000;
-    background: linear-gradient(rgba(17, 17, 17, 0.8), rgba(20, 20, 20, 1));
-} */
-
-/* nav a {
-    text-decoration: none;
-    color: #FFFFFF;
-    font-weight: 800;
-    font-size: 32px;
-    font-family: Yellowtail, serif;
+:root {
+    --primary-color: rgb(13, 106, 197);
+    --primary-color-darker: rgb(9, 48, 56);
 }
 
-nav ul {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    list-style: none;
-    padding: 0;
-    width: 100%;
-}
-
-nav ul li {
-    text-align: center;
-    width: 100%;
-}
-
-nav ul li a {
-    display: inline-block;
-    padding: 10px 0;
-    width: 100%;
-    text-decoration: none;
-    color: #FFFFFF;
-} */
-
-/* header {
+header {
     display: flex;
     flex-direction: column;
     align-items: center;
     color:#FFFFFF;
     text-align: center;
+}
 
+.marginTopSection {
+    margin-top: 20px;
+    padding-top: 20px;
+    padding-bottom: 0px;
+}
+
+.marginBottomSection {
+    margin-top: 0px;
+    padding: 20px 0px 0px 0px;
+}
+
+.menu-label {
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+.navbar {
+    display: flex;
+    justify-content: center;
 }
 
 header, img {
@@ -60,45 +44,7 @@ header, img {
     left: 0;
 }
 
-header h1 {
-    display: flex;;
-    color: #FFFFFF;
-}
-
-header h2 {
-    color: #FFFFFF;
-}
-
-.texto-1 {
-    font-size: 2rem;
-    margin-bottom: 10rem;
-    text-align: center;
-}
-
-.texto-2 {
-    width: 100%;
-    margin-bottom: 5rem;
-    padding-top: 2.9rem;
-    font-size: 2rem;
-    color: rgb(165, 165, 165);
-    text-transform: uppercase;
-}
-
-header h1 {
-    color: #FFFFFF;
-}
-
-header h2 {
-    color: #FFFFFF;
-}
-
-.texto-1 {
-    font-size: 3rem;
-    margin-bottom: 10rem;
-    text-align: center;
-}
-
-.texto-2 {
+.msgInicial {
     margin-bottom: 7.4rem;
     padding-top: 2.9rem;
     font-size: 2rem;
@@ -137,22 +83,143 @@ header h2 {
     background-color: #000000;
     display: flex;
     flex-grow: column wrap;
-    justify-content:space-evenly;   
+    justify-content:space-evenly;
 }
 .contato img {
     width: 100%;
     height: 500px;
+}
+
+section {
+    margin-top: 100px;
+}
+
+.container {
+    max-width: 640px;
+    margin: 50px auto;
+    background: #ffffff;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+form input, form label, form button {
+    display: block;
+    width: 50%;
+    margin-bottom: 10px;
+}
+
+form input {
+    font-size: 24px;
+    height: 50px;
+    padding: 0 20px;
+}
+
+form input:focus {
+    outline: 1px solid var(--primary-color);
+}
+
+form button {
+    border: none;
+    background: var(--primary-color);
+    color: #ffffff;
+    font-size: 18px;
+    font-weight: 700;
+    height: 50px;
+    cursor: pointer;
+    margin-top: 30px;
+}
+
+form button:hover {
+    background: var(--primary-color-darker);
+}
+
+/* .paragrafo-resultado {
+    background: rgb(109,255,182);
+    padding: 10px 20px;
 } */
 
-/* @media screen and (min-width: 768px) {
-    
-    nav {
-        flex-direction: row;
-        justify-content: space-around;
+.paragrafo-resultadoAbaixo {
+    background: rgb(251, 255, 0);
+    padding: 10px 20px;
+}
+
+.paragrafo-resultadoNormal {
+    background: rgb(29, 138, 2);
+    padding: 10px 20px;
+}
+
+.paragrafo-resultadoSobrepeso {
+    background: rgba(255, 0, 0, 0.63);
+    padding: 10px 20px;
+}
+
+.paragrafo-resultadoOb1 {
+    background: rgba(255, 0, 0, 0.747);
+    padding: 10px 20px;
+}
+
+.paragrafo-resultadoOb2 {
+    background: rgba(255, 0, 0, 0.76);
+    padding: 10px 20px;
+}
+
+.paragrafo-resultadoOb3 {
+    background: rgb(255, 0, 0);
+    padding: 10px 20px;
+}
+
+.bad {
+    background: rgb(255, 150, 150);
+    padding: 10px 20px;
+}
+
+.teste {
+    float: right;
+}
+
+p {
+    font-weight: bold;
+    background: rgb(251, 255, 0);
+    padding: 10px 20px;
+}
+
+img {
+    height: 266px;
+    width: auto;
+}
+.titleIMC {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#formulario {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.imgIMC {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.columns {
+    background: #00000009;
+}
+
+.column .container {
+    margin-bottom: 0px;
+}
+
+@media screen and (max-width: 386px) {
+    .navbar {
+        display: block;
     }
 
-    nav ul {
-        flex-direction: row;
-        width: 70%;
+    img {
+        height: 200px;
+        width: auto;
     }
-} */
+}
