--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -52,13 +52,17 @@ header, img {
     text-transform: uppercase;
 }
 
-.btn {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
+a {
+    text-decoration: none;
+    text-decoration-color:#FFFFFF;
+    color: inherit;
 }
 
-.btn, button {
+a:hover {
+    color: rgb(251, 255, 0);
+}
+
+button {
     width: 250px;
     height: 60px;
     cursor: pointer;
@@ -73,7 +77,7 @@ header, img {
     transition: 1.5s;
 }
 
-.btn, button:hover {
+button:hover {
     color: rgb(251, 255, 0);
     border: none;
 }
@@ -88,11 +92,15 @@ header, img {
 
 #sectionEditFundo {
     margin-top: 0px;
-    background-color: rgb(165, 165, 165);
+    background: #00000009;
 }
 
 #pExercicios {
     padding-left: 30px;
+}
+
+.menu-list {
+    text-align: center;
 }
 
 .contato {
