--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,225 +1,55 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
-
-:root {
-    --primary-color: rgb(13, 106, 197);
-    --primary-color-darker: rgb(9, 48, 56);
+* {
+    font-family: "Verdana", sans-serif;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    letter-spacing: 0px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    scroll-behavior: smooth;
+    margin: 0;
 }
 
-header {
+html {
+    padding: 3rem;
+    background-color: #ffffff;
+    color: #EFEFEF;
+}
+
+.conteudo {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    color:#FFFFFF;
-    text-align: center;
-    /* height: 310px; */
+    width: 350px;
+    scroll-snap-type: x mandatory;
+    scroll-padding: 25px;
+    column-gap: 20px;
 }
 
-.intro {
-    height: 310px;
+.card-slide {
+    flex: 0 0 100%;
+    padding: 30px;
+    scroll-snap-align: start;
+    border-radius: 30px;
 }
 
-.marginTopSection {
-    margin-top: 20px;
-    padding-top: 20px;
-    padding-bottom: 0px;
+.card-slide h1 {
+    margin-bottom: 2rem;
 }
 
-.marginBottomSection {
-    margin-top: 0px;
-    padding: 20px 0px 0px 0px;
+.card-slide:nth-child(1) {
+    background: linear-gradient(-229deg, #00DBDE, #FC00FF);
 }
 
-.menu-label {
-    padding: 10px;
-    display: flex;
-    justify-content: center;
+.card-slide:nth-child(2) {
+    background: linear-gradient(-229deg, #0093E9, #80D0C7);
 }
 
-.navbar {
-    display: flex;
-    justify-content: center;
+.card-slide:nth-child(3) {
+    background: linear-gradient(-229deg, #50d990, #d4d054);
 }
 
-header, img {
-    background: linear-gradient(rgba(17, 17, 17, 0.8), rgba(20, 20, 20, 1)), url(/assets/img/fundo.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position-y: 0px;
-    top: 0;
-    left: 0;
+.card-slide:nth-child(4) {
+    background: linear-gradient(-229deg, #D9AFD9, #97D9E1);
 }
 
-.msgInicial {
-    margin-bottom: 7.4rem;
-    padding-top: 2.9rem;
-    font-size: 2rem;
-    color: rgb(165, 165, 165);
-    text-transform: uppercase;
-}
-
-a {
-    text-decoration: none;
-    text-decoration-color:#FFFFFF;
-    color: inherit;
-}
-
-a:hover {
-    color: rgb(251, 255, 0);
-}
-
-button {
-    width: 250px;
-    height: 60px;
-    cursor: pointer;
-    border: 1px solid #FFFFFF;
-    color: #FFFFFF;
-    text-transform: uppercase;
-    background-color: transparent;
-    font-weight: bold;
-    letter-spacing: 0.2rem;
-    border-radius: 20px;
-    position: relative;
-    transition: 1.5s;
-}
-
-button:hover {
-    color: rgb(251, 255, 0);
-    border: none;
-}
-
-.linkPag {
-    border-radius: 20px;
-}
-
-#sectionEdit {
-    margin-top: 0px;
-}
-
-#sectionEditFundo {
-    margin-top: 0px;
-    background: #00000009;
-}
-
-#pExercicios {
-    padding-left: 30px;
-}
-
-.menu-list {
-    text-align: center;
-}
-
-.contato {
-    padding-top: 30px;
-    background-color: #000000;
-    display: flex;
-    flex-grow: column wrap;
-    justify-content:space-evenly;
-}
-
-.level-left {
-    padding-left: 30px;
-}
-.contato img {
-    width: 100%;
-    height: 500px;
-}
-
-section {
-    margin-top: 50px;
-}
-
-.container {
-    max-width: 640px;
-    margin: 50px auto;
-    background: #ffffff;
-    padding: 20px;
-    border-radius: 10px;
-}
-
-form input, form label, form button {
-    display: block;
-    width: 50%;
-    margin-bottom: 10px;
-}
-
-form input {
-    font-size: 24px;
-    height: 50px;
-    padding: 0 20px;
-}
-
-form input:focus {
-    outline: 1px solid var(--primary-color);
-}
-
-form button {
-    border: none;
-    background: var(--primary-color);
-    color: #ffffff;
-    font-size: 18px;
-    font-weight: 700;
-    height: 50px;
-    cursor: pointer;
-    margin-top: 30px;
-}
-
-form button:hover {
-    background: var(--primary-color-darker);
-}
-
-.paragrafo-resultado {
-    background: rgb(251, 255, 0);
-    padding: 10px 20px;
-    font-weight: bold;
-}
-
-.bad {
-    background: rgb(255, 150, 150);
-    padding: 10px 20px;
-    font-weight: bold;
-}
-
-img {
-    height: 266px;
-    width: auto;
-}
-.titleIMC {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#formulario {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.imgIMC {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.columns {
-    background: #00000009;
-}
-
-.column .container {
-    margin-bottom: 0px;
-}
-
-@media screen and (max-width: 386px) {
-    .navbar {
-        display: block;
-    }
-
-    img {
-        height: 200px;
-        width: auto;
-    }
-}
-
-main {
-    background: #00ff00;
+.card-slide:nth-child(5) {
+    background: linear-gradient(-229deg, #FBAB7E, #F7CE68);
 }
